--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo</title>
+    <title>Calculo IMC</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -16,6 +16,8 @@
         <p>
            
         </p>
+
+        <h1>Calcule seu IMC</h1>
 
         <form action="">
             <label for="input-teste-1">Label teste #1</label>
