--- a/index.html
+++ b/index.html
@@ -20,21 +20,17 @@
         <h1>Calcule seu IMC</h1>
 
         <form action="">
-            <label for="input-teste-1">Label teste #1</label>
+
+            <label for="input-teste-1">Peso: </label>
             <input type="text" id="input-teste-1">
 
-            <label for="input-teste-2">Label teste #2</label>
-            <input type="password" id="input-teste-2">
-
-            <label for="input-teste-3">Label teste #3</label>
-            <input type="email" id="input-teste-3">
-
-            <label for="input-teste-4">Label teste #4</label>
-            <input type="number" id="input-teste-4">
+            <label for="input-teste-2">Altura: </label>
+            <input type="text" id="input-teste-2">
 
             <button>Enviar</button>
         </form>
 
+        <div id="resultado"></div>
     </section>
 
     <script src="./assets/js/main.js"></script>
