--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
         <h1>Calcule seu IMC</h1>
 
-        <form action="">
+        <form action="" class="form">
 
             <label for="input-teste-1">Peso: </label>
-            <input type="text" id="input-teste-1">
+            <input type="text" id="peso">
 
             <label for="input-teste-2">Altura: </label>
-            <input type="text" id="input-teste-2">
+            <input type="text" id="altura">
 
             <button>Enviar</button>
         </form>
